# Computer_Architecture_Project_1

./: .cproject  .project  CMakeLists.txt  InstData.cpp  InstData.h  InstDataBin.cpp  InstDataBin.h  InstDataStr.cpp  InstDataStr.h  InstDecode.cpp  InstDecode.h  InstDecoder.cpp  InstDecoder.h  InstEnum.h  InstErrorDetector.cpp  InstErrorDetector.h  InstImageReader.cpp  InstImageReader.h  InstLookUp.cpp  InstLookUp.h  InstMemory.cpp  InstMemory.h  InstSimulator.cpp  InstSimulator.h  InstUtility.cpp  InstUtility.h  README.md  main.cpp  makefile
